Set up Navigation and header. Moving on to main sections

--- a/index.html
+++ b/index.html
@@ -13,11 +13,46 @@
 
 </head>
 <body>
-    <nav class="navbar">
+    <!-- add bootstrap fixed position -->
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navList" aria-controls="navList" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+        <div class="collapse navbar-collapse" id="navList">
+            <ul class="navbar-nav mr-auto" >
+                <li class="nav-item active">
+                    <a href="#" class="nav-link">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Skills</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Experience</a>
+                </li>
+                <li class="nav-item">
+                        <a href="#" class="nav-link">Contact</a>
+                    </li>
+            </ul>
+        </div>
     </nav>
+    <header>
+        <div class="jumbotron">
+            <div class="header-img">
+                <img src="" alt="">
+            </div>
+            <div class="header-info" class="rounded-circle">
+                <h1>Jade Lopez</h1>
+                <h3>Web Developer, Graphic Designer</h3>
+            </div>
+        </div>
+    </header>
 
 
 
