--- a/index.html
+++ b/index.html
@@ -74,22 +74,27 @@
             </div>
         </section>
         <!-- About Section -->
+        <!-- May want to change -->
         <section class=" container mx-auto about" id="about">
+            <h1 class="text-center my-5">About Me</h1>
             <div class="card">
                 <div class="row">
                     <div class="col-lg-6">
-                        <h1>About Me</h1>
+                        <h2 class="card-title text-center mt-4">Hello!</h2>
                         <!-- NEED TO EDIT!!!!! -->
-                        <p>I am a Graphic/Web Designer currently studying Full Stack Web Development and <a
-                                class="Lambda" href="https://lambdaschool.com/" target="_blank">Lambda School.</a> I
-                            love to meet new people, immerse myself into creatively charged atmospheres; and love to
-                            find design inspiration in the world around me. It is important to me to constantly push
-                            myself to learn new things and to help so that I may grow as a designer and an individual.
-                        </p>
+                        <div class="card-body">
+                            <p>I am a Graphic/Web Designer currently studying Full Stack Web Development and <a
+                                    class="Lambda" href="https://lambdaschool.com/" target="_blank">Lambda School.</a> I
+                                love to meet new people, immerse myself into creatively charged atmospheres; and love to
+                                find design inspiration in the world around me. It is important to me to constantly push
+                                myself to learn new things and to help so that I may grow as a designer and an
+                                individual. </p>
+                        </div>
+
                     </div>
                     <div class="col-lg-6">
-                        <h1>Basic Information</h1>
-                        <div class="row">
+                        <h2 class="card-title text-center mt-4">Basic Information</h2>
+                        <div class="row card-body">
                             <!-- May need to adjust column size? -->
                             <div class="col-lg-6 d-flex flex-column">
                                 <p>Email:</p>
@@ -103,19 +108,122 @@
 
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
         </section>
         <!-- Skills -->
-        <section class="container"></section>
+        <!-- Smaller Icons? -->
+        <section class="container" id="skills">
+            <h1 class="text-center my-5">Skills</h1>
+            <!-- Web Dev -->
+            <div class="card mb-5">
+                <h2 class="card-title text-center my-5"> Web Development</h2>
+                <div class="row my-3"">
+                    <div class="col-lg-3 text-center mx-auto">
+                        <a href="https://placeholder.com">
+                            <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                        </a>
+                        <p>HTML 5</p>
+                    </div>
+                    <div class="col-lg-3 text-center mx-auto">
+                        <a href="https://placeholder.com">
+                            <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                        </a>
+                        <p>CSS 3</p>
+                    </div>
+                    <div class="col-lg-3 text-center mx-auto">
+                        <a href="https://placeholder.com">
+                            <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                        </a>
+                        <p>JavaScript</p>
+                    </div>
+                </div>
+                <div class="row mt-3 mb-4">
+                    <div class="col-lg-3 text-center mx-auto">
+                        <a href="https://placeholder.com">
+                            <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                        </a>
+                        <p>Bootstrap</p>
+                    </div>
+                    <div class="col-lg-3 text-center mx-auto">
+                        <a href="https://placeholder.com">
+                            <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                        </a>
+                        <p>React</p>
+                    </div>
+                    <div class="col-lg-3 text-center mx-auto">
+                        <a href="https://placeholder.com">
+                            <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                        </a>
+                        <p>Less</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Graphic and Web Software -->
+            <div class="card">
+                    <h2 class="card-title text-center my-5"> Graphic and Web Software</h2>
+                    <div class="row my-3"">
+                        <div class="col-lg-3 text-center mx-auto">
+                            <a href="https://placeholder.com">
+                                <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                            </a>
+                            <p>Photoshop</p>
+                        </div>
+                        <div class="col-lg-3 text-center mx-auto">
+                            <a href="https://placeholder.com">
+                                <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                            </a>
+                            <p>Illustrator</p>
+                        </div>
+                        <div class="col-lg-3 text-center mx-auto">
+                            <a href="https://placeholder.com">
+                                <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                            </a>
+                            <p>InDesign</p>
+                        </div>
+                    </div>
+                    <div class="row mt-3 mb-4">
+                        <div class="col-lg-3 text-center mx-auto">
+                            <a href="https://placeholder.com">
+                                <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                            </a>
+                            <p>DreamWeaver</p>
+                        </div>
+                        <div class="col-lg-3 text-center mx-auto">
+                            <a href="https://placeholder.com">
+                                <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                            </a>
+                            <p>Adobe XD</p>
+                        </div>
+                        <div class="col-lg-3 text-center mx-auto">
+                            <a href="https://placeholder.com">
+                                <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                            </a>
+                            <p>VS Code</p>
+                        </div>
+                    </div>
+                </div>
+        </section>
         <!-- Portfolio -->
-        <section class="container"></section>
+        <section class="container">
+            <h1 class="text-center my-5">Portfolio</h1>
+            <div class="card">
+            </div>
+        </section>
         <!-- Experience -->
-        <section class="container"></section>
+        <section class="container">
+            <h1 class="text-center my-5">Experience</h1>
+            <div class="card">
+
+            </div>
+        </section>
         <!-- Contact -->
-        <section class="container"></section>
+        <section class="container">
+            <h1 class="text-center my-5">Contact Me</h1>
+            <div class="card">
+            </div>
+        </section>
 
     </main>
     <footer>
