Finished Portfolio section

--- a/index.html
+++ b/index.html
@@ -113,102 +113,184 @@
             </div>
         </section>
         <!-- Skills -->
-        <!-- Smaller Icons? -->
+        <!-- Smaller Icons? flex box styling? -->
         <section class="container" id="skills">
             <h1 class="text-center my-5">Skills</h1>
             <!-- Web Dev -->
             <div class="card mb-5">
                 <h2 class="card-title text-center my-5"> Web Development</h2>
                 <div class="row my-3"">
-                    <div class="col-lg-3 text-center mx-auto">
-                        <a href="https://placeholder.com">
-                            <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                        </a>
-                        <p>HTML 5</p>
-                    </div>
-                    <div class="col-lg-3 text-center mx-auto">
-                        <a href="https://placeholder.com">
-                            <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                        </a>
-                        <p>CSS 3</p>
-                    </div>
-                    <div class="col-lg-3 text-center mx-auto">
-                        <a href="https://placeholder.com">
-                            <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                        </a>
-                        <p>JavaScript</p>
-                    </div>
+                    <div class=" col-lg-3 text-center mx-auto">
+                    <a href="https://placeholder.com">
+                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                    </a>
+                    <p>HTML 5</p>
                 </div>
-                <div class="row mt-3 mb-4">
-                    <div class="col-lg-3 text-center mx-auto">
-                        <a href="https://placeholder.com">
-                            <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                        </a>
-                        <p>Bootstrap</p>
-                    </div>
-                    <div class="col-lg-3 text-center mx-auto">
-                        <a href="https://placeholder.com">
-                            <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                        </a>
-                        <p>React</p>
-                    </div>
-                    <div class="col-lg-3 text-center mx-auto">
-                        <a href="https://placeholder.com">
-                            <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                        </a>
-                        <p>Less</p>
-                    </div>
+                <div class="col-lg-3 text-center mx-auto">
+                    <a href="https://placeholder.com">
+                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                    </a>
+                    <p>CSS 3</p>
                 </div>
+                <div class="col-lg-3 text-center mx-auto">
+                    <a href="https://placeholder.com">
+                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                    </a>
+                    <p>JavaScript</p>
+                </div>
+            </div>
+            <div class="row mt-3 mb-4">
+                <div class="col-lg-3 text-center mx-auto">
+                    <a href="https://placeholder.com">
+                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                    </a>
+                    <p>Bootstrap</p>
+                </div>
+                <div class="col-lg-3 text-center mx-auto">
+                    <a href="https://placeholder.com">
+                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                    </a>
+                    <p>React</p>
+                </div>
+                <div class="col-lg-3 text-center mx-auto">
+                    <a href="https://placeholder.com">
+                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                    </a>
+                    <p>Less</p>
+                </div>
+            </div>
             </div>
             <!-- Graphic and Web Software -->
             <div class="card">
-                    <h2 class="card-title text-center my-5"> Graphic and Web Software</h2>
-                    <div class="row my-3"">
-                        <div class="col-lg-3 text-center mx-auto">
-                            <a href="https://placeholder.com">
-                                <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                            </a>
-                            <p>Photoshop</p>
-                        </div>
-                        <div class="col-lg-3 text-center mx-auto">
-                            <a href="https://placeholder.com">
-                                <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                            </a>
-                            <p>Illustrator</p>
-                        </div>
-                        <div class="col-lg-3 text-center mx-auto">
-                            <a href="https://placeholder.com">
-                                <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                            </a>
-                            <p>InDesign</p>
-                        </div>
-                    </div>
-                    <div class="row mt-3 mb-4">
-                        <div class="col-lg-3 text-center mx-auto">
-                            <a href="https://placeholder.com">
-                                <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                            </a>
-                            <p>DreamWeaver</p>
-                        </div>
-                        <div class="col-lg-3 text-center mx-auto">
-                            <a href="https://placeholder.com">
-                                <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                            </a>
-                            <p>Adobe XD</p>
-                        </div>
-                        <div class="col-lg-3 text-center mx-auto">
-                            <a href="https://placeholder.com">
-                                <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                            </a>
-                            <p>VS Code</p>
-                        </div>
-                    </div>
+                <h2 class="card-title text-center my-5"> Graphic and Web Software</h2>
+                <div class="row my-3"">
+                        <div class=" col-lg-3 text-center mx-auto">
+                    <a href="https://placeholder.com">
+                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                    </a>
+                    <p>Photoshop</p>
                 </div>
+                <div class="col-lg-3 text-center mx-auto">
+                    <a href="https://placeholder.com">
+                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                    </a>
+                    <p>Illustrator</p>
+                </div>
+                <div class="col-lg-3 text-center mx-auto">
+                    <a href="https://placeholder.com">
+                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                    </a>
+                    <p>InDesign</p>
+                </div>
+            </div>
+            <div class="row mt-3 mb-4">
+                <div class="col-lg-3 text-center mx-auto">
+                    <a href="https://placeholder.com">
+                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                    </a>
+                    <p>DreamWeaver</p>
+                </div>
+                <div class="col-lg-3 text-center mx-auto">
+                    <a href="https://placeholder.com">
+                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                    </a>
+                    <p>Adobe XD</p>
+                </div>
+                <div class="col-lg-3 text-center mx-auto">
+                    <a href="https://placeholder.com">
+                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
+                    </a>
+                    <p>VS Code</p>
+                </div>
+            </div>
+            </div>
         </section>
         <!-- Portfolio -->
         <section class="container">
             <h1 class="text-center my-5">Portfolio</h1>
-            <div class="card">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card">
+                        <img src="#" alt="" class="card-img-top" style="background: grey; height: 200px ;">
+                        <div class="card-body">
+                            <h4 class="card-title text-center">Title</h4>
+                            <p>This will be short project description?</p>
+                            <div class="button-group d-flex justify-content-center">
+                                <a href="" class="btn">Site</a>
+                                <a href="" class="btn">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card">
+                        <img src="#" alt="" class="card-img-top" style="background: grey; height: 200px ;">
+                        <div class="card-body">
+                            <h4 class="card-title text-center">Title</h4>
+                            <p>This will be short project description?</p>
+                            <div class="button-group d-flex justify-content-center">
+                                <a href="" class="btn">Site</a>
+                                <a href="" class="btn">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card">
+                        <img src="#" alt="" class="card-img-top" style="background: grey; height: 200px ;">
+                        <div class="card-body">
+                            <h4 class="card-title text-center">Title</h4>
+                            <p>This will be short project description?</p>
+                            <div class="button-group d-flex justify-content-center" role="group"
+                                aria-label="Button Group">
+                                <a href="" class="btn">Site</a>
+                                <a href="" class="btn">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-lg-4">
+                    <div class="card">
+                        <img src="#" alt="" class="card-img-top" style="background: grey; height: 200px ;">
+                        <div class="card-body">
+                            <h4 class="card-title text-center">Title</h4>
+                            <p>This will be short project description?</p>
+                            <div class="button-group d-flex justify-content-center">
+                                <a href="" class="btn">Site</a>
+                                <a href="" class="btn">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card">
+                        <img src="#" alt="" class="card-img-top" style="background: grey; height: 200px ;">
+                        <div class="card-body">
+                            <h4 class="card-title text-center">Title</h4>
+                            <p>This will be short project description?</p>
+                            <div class="button-group d-flex justify-content-center">
+                                <a href="" class="btn">Site</a>
+                                <a href="" class="btn">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card">
+                        <img src="#" alt="" class="card-img-top" style="background: grey; height: 200px ;">
+                        <div class="card-body">
+                            <h4 class="card-title text-center">Title</h4>
+                            <p>This will be short project description?</p>
+                            <div class="button-group d-flex justify-content-center" role="group"
+                                aria-label="Button Group">
+                                <a href="" class="btn">Site</a>
+                                <a href="" class="btn">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Experience -->
