--- a/index.html
+++ b/index.html
@@ -32,25 +32,24 @@
                         <a href="#" class="nav-link">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">About</a>
+                        <a href="#about" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Skills</a>
+                        <a href="#skills" class="nav-link">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Portfolio</a>
+                        <a href="#portfolio" class="nav-link">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Experience</a>
+                        <a href="#experience" class="nav-link">Experience</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Contact</a>
+                        <a href="#contact" class="nav-link">Contact</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
-
     <main role="main">
         <!-- need to fix position to the top. covered by nav-bar's fixed positioning -->
         <!-- Jumbotron -->
@@ -206,7 +205,7 @@
             </div>
         </section>
         <!-- Portfolio -->
-        <section class="container">
+        <section class="container" id="portfolio">
             <h1 class="text-center my-5">Portfolio</h1>
             <div class="row">
                 <div class="col-lg-4">
@@ -294,16 +293,167 @@
             </div>
         </section>
         <!-- Experience -->
-        <section class="container">
+        <section class="container" id="experience">
             <h1 class="text-center my-5">Experience</h1>
+            <!-- Work Experience -->
             <div class="card">
-
+                <h2 class="text-center mt-5 mb-4">Work Experience</h2>
+                <!-- 1 -->
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <div class=" card-body d-flex flex-column">
+                            <h4>5150Whips</h4>
+                            <p>September 2018</p>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class=" card-body d-flex flex-column">
+                            <h4>Web Developer & Designer</h4>
+                            <p>Hired by 5150 whips to fix, maintain, and make updates to the current website. Currently
+                                working with owner to create a new website which I will be updating and maintaining when
+                                completed.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- 2 -->
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <div class=" card-body d-flex flex-column">
+                            <h4>Cryptocurrency</h4>
+                            <p>Nov 2017 - Jan 2018</p>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class=" card-body d-flex flex-column">
+                            <h4>Graphic Designer</h4>
+                            <p>Designed a cover for a company booklet presentation explaining cryptocurrency, mining
+                                cryptocurrency, and how to build and operate a cryptocurrency mining.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- 3 -->
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <div class=" card-body d-flex flex-column">
+                            <h4>12am Miscreants</h4>
+                            <p>May 2017</p>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class=" card-body d-flex flex-column">
+                            <h4>Graphic Designer</h4>
+                            <p>Hired to create a logo and branding for a "Let's Play" style YouTube page called 12am
+                                Miscreants. Designed a central logo to be used in all collateral materials and combined
+                                it with thier YouTube banned I designed as well.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- School Experience -->
+            <div class="card mt-5">
+                <h2 class="text-center mt-5 mb-4">School Experience</h2>
+                <!-- 1 -->
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <div class=" card-body d-flex flex-column">
+                            <h4>2019 - Present</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class=" card-body d-flex flex-column">
+                            <h4>Lambda School</h4>
+                            <p>Full Stack Web Developer</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- 2 -->
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <div class=" card-body d-flex flex-column">
+                            <h4>2016 - 2019</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class=" card-body d-flex flex-column">
+                            <h4>Foothill College</h4>
+                            <p>AA in Graphic &amp; Interactive Design</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- 3 -->
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <div class=" card-body d-flex flex-column">
+                            <h4>2007 - 2010</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class=" card-body d-flex flex-column">
+                            <h4>San Francisco State University</h4>
+                            <p>Music - Vocal Performance in Opera</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- 4 -->
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <div class=" card-body d-flex flex-column">
+                            <h4>2001 - 2007</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class=" card-body d-flex flex-column">
+                            <h4>Riverside Community College</h4>
+                            <p>Associate in Science</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- 4 -->
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <div class=" card-body d-flex flex-column">
+                            <h4>1997 - 2001</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class=" card-body d-flex flex-column">
+                            <h4>Redlands East Valley Highschool</h4>
+                            <p>Highschool Diploma</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Contact -->
-        <section class="container">
+        <section class="container" id="contact">
             <h1 class="text-center my-5">Contact Me</h1>
-            <div class="card">
+            <div class="card ">
+                <div class="mx-auto mt-5">
+                    <p>Have questions or just want to say hello? Drop me a line and I'll get back to you shortly.</p>
+                </div>
+                <!-- Need to center. May not need form-container -->
+                <div class="form-container" >
+                    <form class="mt-5 " action="">
+                        <div class="form-row ">
+                            <div class="form-group col-md-10">
+                                <label for="name">Name:</label>
+                                <input type="text" class="form-control form-control-lg">
+                            </div>
+                            <div class="form-group col-md-10">
+                                <label for="email">Email:</label>
+                                <input type="text" class="form-control form-control-lg">
+                            </div>
+                            <div class="form-group col-md-10">
+                                <label for="phone">Phone:</label>
+                                <input type="text" class="form-control form-control-lg">
+                            </div>
+                            <div class="form-group col-md-10">
+                                <label for="message">Message:</label>
+                                <textarea class="form-control" name="message" id="" cols="30" rows="10"></textarea>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </section>
 
