--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+     <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
     <meta name="description" content="Portfolio for Jade E Lopez">
     <meta name="author" content="Jade E Lopez">
     <title>Jade E Lopez</title>
@@ -74,7 +77,7 @@
         </section>
         <!-- About Section -->
         <!-- May want to change -->
-        <section class=" container mx-auto about" id="about">
+        <section class=" container mx-auto mb-5" id="about">
             <h1 class="text-center my-5">About Me</h1>
             <div class="card">
                 <div class="row">
@@ -113,7 +116,7 @@
         </section>
         <!-- Skills -->
         <!-- Smaller Icons? flex box styling? -->
-        <section class="container" id="skills">
+        <section class="container mb-5" id="skills">
             <h1 class="text-center my-5">Skills</h1>
             <!-- Web Dev -->
             <div class="card mb-5">
@@ -205,7 +208,7 @@
             </div>
         </section>
         <!-- Portfolio -->
-        <section class="container" id="portfolio">
+        <section class="container mb-5" id="portfolio">
             <h1 class="text-center my-5">Portfolio</h1>
             <div class="row">
                 <div class="col-lg-4">
@@ -293,7 +296,7 @@
             </div>
         </section>
         <!-- Experience -->
-        <section class="container" id="experience">
+        <section class="container mb-5" id="experience">
             <h1 class="text-center my-5">Experience</h1>
             <!-- Work Experience -->
             <div class="card">
@@ -425,14 +428,14 @@
             </div>
         </section>
         <!-- Contact -->
-        <section class="container" id="contact">
+        <section class="container mb-5" id="contact">
             <h1 class="text-center my-5">Contact Me</h1>
             <div class="card ">
                 <div class="mx-auto mt-5">
                     <p>Have questions or just want to say hello? Drop me a line and I'll get back to you shortly.</p>
                 </div>
                 <!-- Need to center. May not need form-container -->
-                <div class="form-container" >
+                <div class="form-container">
                     <form class="mt-5 " action="">
                         <div class="form-row ">
                             <div class="form-group col-md-10">
@@ -452,22 +455,46 @@
                                 <textarea class="form-control" name="message" id="" cols="30" rows="10"></textarea>
                             </div>
                         </div>
+                        <button type="Submit" class="btn">Submit</button>
                     </form>
                 </div>
             </div>
         </section>
 
     </main>
-    <footer>
-
+    <footer class="px-5">
+        <div class="container d-flex justify-content-between">
+            <p class="my-2">&copy;2019 Jade Lopez</p>
+            <ul class="d-flex" style="list-style: none">
+                <li class="nav-item active">
+                    <a href="#" class="nav-link">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a href="#about" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#skills" class="nav-link">Skills</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#portfolio" class="nav-link">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#experience" class="nav-link">Experience</a>
+                </li>
+            </ul>
+            <div class="social-icons ">
+                    <a href="https://www.linkedin.com/in/jade-lopez-3a31baa2" target="_blank">
+                        <i class="fab fa-linkedin fa-2x my-2 mx-2"></i>
+                    </a>
+                    <a href="https://www.behance.net/jadeli1720" target="_blank">
+                        <i class="fab fa-behance fa-2x my-2 mx-2"></i>
+                    </a>
+                    <a href="https://github.com/jadeli1720" target="_blank">
+                        <i class="fab fa-github-square fa-2x my-2 mx-2"></i>
+                    </a>
+            </div>
+        </div>
     </footer>
-
-
-
-
-
-
-
 
 
     <!-- Optional JavaScript -->
