After some research, realized that I don't want or need to use less

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- add bootstrap fixed position -->
     <header>
         <!-- Navigation -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navList"
                 aria-controls="navList" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -465,7 +465,7 @@
     <footer class="px-5">
         <div class="container d-flex justify-content-between">
             <p class="my-2">&copy;2019 Jade Lopez</p>
-            <ul class="d-flex" style="list-style: none">
+            <ul class="d-flex list-unstyled">
                 <li class="nav-item active">
                     <a href="#" class="nav-link">Home <span class="sr-only">(current)</span></a>
                 </li>
