Started styling and adding the needed images to the images files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <!--[if lt IE 9]>
+    <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
     <meta name="description" content="Portfolio for Jade E Lopez">
@@ -24,14 +24,14 @@
     <!-- add bootstrap fixed position -->
     <header>
         <!-- Navigation -->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <nav class="navbar navbar-expand-lg fixed-top ">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navList"
                 aria-controls="navList" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navList">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item ">
                         <a href="#" class="nav-link">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
@@ -121,90 +121,63 @@
             <!-- Web Dev -->
             <div class="card mb-5">
                 <h2 class="card-title text-center my-5"> Web Development</h2>
-                <div class="row my-3"">
-                    <div class=" col-lg-3 text-center mx-auto">
-                    <a href="https://placeholder.com">
-                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                    </a>
-                    <p>HTML 5</p>
+                <div class="d-flex justify-content-around flex-wrap">
+                    <div class="flex-column text-center m-3">
+                        <img src="./images/HTML5.png" alt="Html 5 logo">
+                        <p>HTML 5</p>
+                    </div>
+                    <div class="flex-column text-center m-3">
+                        <img src="./images/CSS3.png" alt="Css 3 logo">
+                        <p>HTML 5</p>
+                    </div>
+                    <div class="flex-column text-center m-3">
+                        <img src="./images/javaScript.png" alt="Javascript Logo">
+                        <p>JavaScript</p>
+                    </div>
+                    <div class="flex-column text-center m-3">
+                        <img src="./images/bootstrap.png" alt="Placeholder image">
+                        <p>Bootstrap</p>
+                    </div>
+                    <div class="flex-column text-center m-3">
+                        <img src="./images/react-dark.png" alt="Placeholder image">
+                        <p>React</p>
+                    </div>
+                    <div class="flex-column text-center m-3">
+                        <img src="./images/less.png" alt="Placeholder image">
+                        <p>Less</p>
+                    </div>
                 </div>
-                <div class="col-lg-3 text-center mx-auto">
-                    <a href="https://placeholder.com">
-                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                    </a>
-                    <p>CSS 3</p>
-                </div>
-                <div class="col-lg-3 text-center mx-auto">
-                    <a href="https://placeholder.com">
-                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                    </a>
-                    <p>JavaScript</p>
-                </div>
-            </div>
-            <div class="row mt-3 mb-4">
-                <div class="col-lg-3 text-center mx-auto">
-                    <a href="https://placeholder.com">
-                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                    </a>
-                    <p>Bootstrap</p>
-                </div>
-                <div class="col-lg-3 text-center mx-auto">
-                    <a href="https://placeholder.com">
-                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                    </a>
-                    <p>React</p>
-                </div>
-                <div class="col-lg-3 text-center mx-auto">
-                    <a href="https://placeholder.com">
-                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                    </a>
-                    <p>Less</p>
-                </div>
-            </div>
             </div>
             <!-- Graphic and Web Software -->
-            <div class="card">
+            <div class="card" id="Software">
                 <h2 class="card-title text-center my-5"> Graphic and Web Software</h2>
-                <div class="row my-3"">
-                        <div class=" col-lg-3 text-center mx-auto">
-                    <a href="https://placeholder.com">
-                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                    </a>
-                    <p>Photoshop</p>
+                <div class="d-flex justify-content-around flex-wrap">
+                    <div class="flex-column text-center m-3">
+                        <img src="./images/photoshop.png" alt="Placeholder image">
+                        <p>Photoshop</p>
+                    </div>
+                    <div class="flex-column text-center m-3">
+                        <img src="./images/Illustrator.png" alt="Placeholder image">
+                        <p>Illustrator</p>
+                    </div>
+                    <div class="flex-column text-center m-3">
+                        <img src="./images/indesign.png" alt="Placeholder image">
+                        <p>InDesign</p>
+                    </div>
+                    <div class="flex-column text-center m-3">
+                        <img src="./images/dreamweaver.png" alt="Placeholder image">
+                        <p>DreamWeaver</p>
+                    </div>
+                    <div class="flex-column text-center m-3">
+                        <img src="./images/adobe-xd.png" alt="Placeholder image">
+                        <p>Adobe XD</p>
+                    </div>
+                    <div class="flex-column text-center m-3">
+                        <img src="./images/vs_code.png" alt="Placeholder image">
+                        <p>VS Code</p>
+                    </div>
                 </div>
-                <div class="col-lg-3 text-center mx-auto">
-                    <a href="https://placeholder.com">
-                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                    </a>
-                    <p>Illustrator</p>
-                </div>
-                <div class="col-lg-3 text-center mx-auto">
-                    <a href="https://placeholder.com">
-                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                    </a>
-                    <p>InDesign</p>
-                </div>
-            </div>
-            <div class="row mt-3 mb-4">
-                <div class="col-lg-3 text-center mx-auto">
-                    <a href="https://placeholder.com">
-                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                    </a>
-                    <p>DreamWeaver</p>
-                </div>
-                <div class="col-lg-3 text-center mx-auto">
-                    <a href="https://placeholder.com">
-                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                    </a>
-                    <p>Adobe XD</p>
-                </div>
-                <div class="col-lg-3 text-center mx-auto">
-                    <a href="https://placeholder.com">
-                        <img src="https://via.placeholder.com/150?text=Jade Lopez" alt="Placeholder image">
-                    </a>
-                    <p>VS Code</p>
-                </div>
-            </div>
+
             </div>
         </section>
         <!-- Portfolio -->
@@ -466,9 +439,6 @@
         <div class="container d-flex justify-content-between">
             <p class="my-2">&copy;2019 Jade Lopez</p>
             <ul class="d-flex list-unstyled">
-                <li class="nav-item active">
-                    <a href="#" class="nav-link">Home <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
                     <a href="#about" class="nav-link">About</a>
                 </li>
@@ -483,15 +453,15 @@
                 </li>
             </ul>
             <div class="social-icons ">
-                    <a href="https://www.linkedin.com/in/jade-lopez-3a31baa2" target="_blank">
-                        <i class="fab fa-linkedin fa-2x my-2 mx-2"></i>
-                    </a>
-                    <a href="https://www.behance.net/jadeli1720" target="_blank">
-                        <i class="fab fa-behance fa-2x my-2 mx-2"></i>
-                    </a>
-                    <a href="https://github.com/jadeli1720" target="_blank">
-                        <i class="fab fa-github-square fa-2x my-2 mx-2"></i>
-                    </a>
+                <a href="https://www.linkedin.com/in/jade-lopez-3a31baa2" target="_blank">
+                    <i class="fab fa-linkedin fa-2x my-2 mx-2"></i>
+                </a>
+                <a href="https://www.behance.net/jadeli1720" target="_blank">
+                    <i class="fab fa-behance fa-2x my-2 mx-2"></i>
+                </a>
+                <a href="https://github.com/jadeli1720" target="_blank">
+                    <i class="fab fa-github-square fa-2x my-2 mx-2"></i>
+                </a>
             </div>
         </div>
     </footer>
